deploy/overlays/staging/app-replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corvus-app
spec:
  replicas: 2
